--- a/src/styles/scss/component/_carousel.scss
+++ b/src/styles/scss/component/_carousel.scss
@@ -58,3 +58,32 @@
         overflow: hidden;
     }
 }
+
+.navigation-circle-arrow{
+    cursor: pointer;
+    width: 48px;
+    height: 48px;
+    box-shadow: 0px 8px 12px 0px #24272C26;
+    background-color: var(--white);
+    @include flex(center,center);
+    border-radius: 999px;
+    .icon{
+        color: #24272C;
+        font-size: 20px;
+    }
+}
+.wrap-swiper{
+    position: relative;
+    .navigation-circle-arrow{
+        position: absolute;
+        z-index: 10;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+    .swiper-nav-next{
+        left: -22px;
+    }
+    .swiper-nav-prev{
+        right: -22px;
+    }
+}
