--- a/src/styles/scss/component/_header.scss
+++ b/src/styles/scss/component/_header.scss
@@ -1,6 +1,9 @@
 .header {
     background-color: var(--white);
     box-shadow: var(--shadow-2);
+    position: sticky;
+    top: 0;
+    z-index: 100;
     .logo {
         img {
             width: 114px;
