--- a/src/styles/scss/_dashboard.scss
+++ b/src/styles/scss/_dashboard.scss
@@ -13,8 +13,33 @@
                 margin-bottom: 50px;
             }
         }
+        .h7{
+            color: var(--black-3);
+        }
         .title{
             margin-bottom: 26px;
+        }
+        .title-v2{
+            margin-bottom: 30px;
+        }
+        .sub-box{
+            &:not(:last-child){
+                margin-bottom: 30px;
+            }
+           
+        }
+        .label{
+            margin-bottom: 12px;
+            font-weight: 600;
+            font-family: var(--poppins);
+        }
+        .group-ip-2{
+            display: grid;
+            gap: 20px;
+            grid-template-columns: 1fr 1fr;
+            // fieldset{
+            //     flex-grow: 1;
+            // }
         }
     }
 }
@@ -260,5 +285,37 @@
         padding-left: 20px;
         padding-right: 20px;
         min-width: 240px;
+    }
+}
+.box-upload-profile{
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    .box-upload{
+        margin: 10px 0px;
+        position: relative;
+        display: flex;
+        align-items: center;
+        gap: 16px;
+        padding: 4px;
+        border-radius: 999px;
+        border: 1px solid var(--line-2);
+        input{
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            padding: 0;
+            margin: 0;
+            opacity: 0;
+        }
+        .tf-btn{
+            padding: 10px 18px;
+        }
+    }
+    .content-right{
+        flex-grow: 1;
     }
 }
