--- a/src/styles/scss/_reset.scss
+++ b/src/styles/scss/_reset.scss
@@ -469,8 +469,9 @@ tr{
 }
 
 // color text
+.text-primary,
 .text_primary {
-	color: var(--primary);
+	color: var(--primary) !important;
 }
 .text_primary-sub {
 	color: var(--primary-sub);
@@ -564,6 +565,9 @@ tr{
 .mb-6{
 	margin-bottom: 6px !important;
 }
+.mb-12{
+	margin-bottom: 12px;
+}
 .mb-16{
 	margin-bottom: 16px;
 }
@@ -571,7 +575,7 @@ tr{
 	margin-bottom: 14px;
 }
 .mb-10{
-	margin-bottom: 10px;
+	margin-bottom: 10px !important;
 }
 
 // radius
@@ -622,7 +626,9 @@ tr{
 .gap-12 {
 	gap: 12px;
 }
-
+.gap-14{
+	gap: 14px;
+}
 .gap-15 {
 	gap: 15px;
 }
