--- a/src/styles/scss/component/_box-icon.scss
+++ b/src/styles/scss/component/_box-icon.scss
@@ -5,6 +5,10 @@
         width: 50px;
         height: 50px;
     }
+    &.w_52 {
+        width: 52px;
+        height: 52px;
+    }
     &.round {
         border-radius: 50%;
     }
