--- a/src/styles/scss/component/_button.scss
+++ b/src/styles/scss/component/_button.scss
@@ -41,6 +41,18 @@
         border-color: transparent;
     }
 }
+.btn-line-primary{
+    padding: 13.5px 34.5px;
+    background-color: var(--white);
+    color: var(--primary);
+    border: 1px solid var(--primary);
+    box-sizing: border-box;
+    &:hover{
+        background-color: var(--primary);
+        color: var(--white);
+        border-color: transparent;
+    }
+}
 .btn-icon {
     .icon {
         font-size: 20px;
