--- a/src/styles/scss/component/_button.scss
+++ b/src/styles/scss/component/_button.scss
@@ -1,6 +1,7 @@
 .tf-btn {
     font-family: var(--poppins);
-    padding: 14px 34.5px;
+    padding: 13px 34.5px;
+    min-height: 50px;
     color: var(--white);
     font-size: 14px;
     line-height: 20px;
@@ -27,10 +28,15 @@
         padding-right: 15px;
         min-width: 162px;
     } 
+    &.width-2{
+        padding-left: 15px;
+        padding-right: 15px;
+        min-width: 196px;
+    } 
    
 }
 .btn-line{
-    padding: 13.5px 34.5px;
+    // padding: 13.5px 34.5px;
     background-color: var(--white);
     color: var(--primary);
     border: 1px solid var(--line-2);
@@ -42,7 +48,7 @@
     }
 }
 .btn-line-primary{
-    padding: 13.5px 34.5px;
+    // padding: 13.5px 34.5px;
     background-color: var(--white);
     color: var(--primary);
     border: 1px solid var(--primary);
