--- a/src/styles/scss/_dashboard.scss
+++ b/src/styles/scss/_dashboard.scss
@@ -67,6 +67,9 @@
             gap: 30px;
         }
     }
+    .table-statistical{
+        margin-bottom: 26px;
+    }
 }
 .tox{
     &.tox-tinymce{
@@ -89,12 +92,7 @@
         
     }
 }
-#tinymce {
-    margin: 0 10px;
-    p{
-        margin: 0;
-    }
-}
+
 
 
 .file-upload-item{
@@ -298,6 +296,95 @@
         } 
     }
 }
+.flat-earning-wrap{
+    display: flex;
+    gap: 8px;
+    flex-wrap: wrap;
+    .earning-item{
+        flex-grow: 1;
+    }
+}
+.earning-item{
+    border-radius: 14px;
+    padding: 20px;
+    background-color: #E4F0EE;
+    display: flex;
+    align-items: center;
+    gap: 14px;
+    position: relative;
+    .box-icon{
+        border-radius: 999px;
+        width: 52px;
+        height: 52px;
+        background-color: #2C4E48;
+        .icon{
+            font-size: 22px;
+            color: var(--white);
+        }
+    }
+    .title-earning{
+        margin-top: 4px;
+        line-height: 28.6px;
+        color: #2C4E48;
+    }
+    .value-earing{
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        right: 20px;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        .icon{
+            font-size: 24px;
+            color: #2C4E48;
+        }
+        .value{
+            font-family: var(--poppins);
+            font-weight: 700;
+            color: #2C4E48;
+        }
+    }
+    .content{
+        flex-grow: 1;
+        display: flex;
+        justify-content: space-between;
+    }
+    &.bg-1{
+        background-color: #F6ECEA;
+        .box-icon{
+            background-color: #624741;
+        }
+        .title-earning{
+            color: #624741;
+        }
+        .value-earing{
+            .value,
+            .icon{
+                color: #624741;
+
+            }
+        }
+    }
+    &.bg-2{
+        background-color: #FBF1E5;
+        .title-earning{
+            color: #5F4F3C;
+        }
+        .box-icon{
+            background-color: #5F4F3C;
+        }
+        .value-earing{
+            .value,
+            .icon{
+                color: #5F4F3C;
+
+            }
+        }
+    }
+}
+
+
 .table-public-file{
     min-width: 800px;
     margin-bottom: 24px;
@@ -427,6 +514,14 @@
         min-width: 100px;
         height: 44px;
         padding: 10px;
+    }
+}
+.table-statistical{
+    thead{
+        th{
+            
+            width: 33.3% !important;
+        }
     }
 }
 .table-download{
