--- a/src/styles/scss/component/_form.scss
+++ b/src/styles/scss/component/_form.scss
@@ -194,6 +194,8 @@
         padding: 0;
         padding-right: 20px;
         min-width: 67px;
+        justify-content: flex-start;
+        font-weight: 500;
        &::after{
         right: 0;
        }
