--- a/src/styles/scss/_reset.scss
+++ b/src/styles/scss/_reset.scss
@@ -472,6 +472,11 @@ tr{
 	line-height: 16.8px;
 	color: rgba(48, 53, 56,0.5);
 }
+.text-7{
+	font-size: 14px;
+	line-height: 15.4px;
+	color: #7B7B7B;
+}
 
 // color text
 .text-primary,
