--- a/src/styles/scss/_section.scss
+++ b/src/styles/scss/_section.scss
@@ -408,14 +408,6 @@
 	align-items: center;
 	gap: 20px;
 	.avatar-check {
-		width: 80px;
-		height: 80px;
-		background-clip: padding-box;
-		padding: 2px;
-		background-color: var(--white);
-		border: 2px solid var(--primary);
-		border-radius: 50%;
-		@include flex(center, center);
 		// &::before {
 		//     content: "";
 		//     position: absolute;
@@ -439,6 +431,14 @@
 }
 .avatar-check {
 	position: relative;
+	width: 80px;
+	height: 80px;
+	background-clip: padding-box;
+	padding: 2px;
+	background-color: var(--white);
+	border: 2px solid var(--primary);
+	border-radius: 50%;
+	@include flex(center, center);
 	.check {
 		position: absolute;
 		bottom: 0;
@@ -722,6 +722,29 @@
 		display: flex;
 		align-items: center;
 		gap: 30px;
+	}
+	&.style-2{
+		padding: 0;
+		justify-content: space-between;
+		gap: 15px;
+		margin-bottom: 30px;
+		.tag{
+			font-family: var(--poppins);
+			border-radius: 99px;
+			padding: 13px 18px;
+			border: 1px solid var(--line-2);
+			font-size: 14px;
+			line-height: 21px;
+			font-weight: 600;
+			color: var(--black-1);
+			@include transition3;
+			&:hover,&.active{
+				background-color: var(--primary);
+				color: var(--white);
+				border-color: var(--primary);
+			}
+		}
+
 	}
 }
 .flat-template-category {
@@ -2040,4 +2063,51 @@
 
 .flat-banner-profile{
 	padding: 80px 0px 40px;
+}
+.banner-profile{
+	.banner{
+		border-radius: 24px;
+		overflow: hidden;
+		height: 350px;
+		img{
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
+	.avatar-check{
+		margin-top: -70px;
+		margin-left: 80px;
+		width: 140px;
+		height: 140px;
+		border: none;
+	}
+	.avatar{
+		width: 128px;
+		height: 128px;
+	}
+	.check{
+		width: 30px;
+		height: 30px;
+		right: 20px;
+	}
+}
+.sidebar-profile-wrap{
+	padding: 20px;
+	border-radius: 16px;
+	border: 1px solid var(--line-2);
+	.box{
+		&:not(:last-child){
+			padding-bottom: 30px;
+			margin-bottom: 30px;
+			border-bottom: 1px solid var(--line-2);
+		}
+	}
+	.box-title{
+		margin-bottom: 30px;
+		.h8{
+			margin-bottom: 6px;
+		}
+	}
+
 }
