--- a/src/styles/scss/abstracts/_variable.scss
+++ b/src/styles/scss/abstracts/_variable.scss
@@ -1,7 +1,8 @@
 //settings
 :root {
 	--fontIcon: "icomoon";
-
+	--inter: "Inter", sans-serif;
+	--poppins: "Poppins", sans-serif;
 	// color
 	--primary: #450d87;
 	--primary-hover: #370a6b;
