--- a/src/styles/scss/_reset.scss
+++ b/src/styles/scss/_reset.scss
@@ -111,6 +111,8 @@ section {
 
 html {
 	margin-right: 0 !important;
+	width: 100%;
+	height: 100%;
 }
 
 * {
@@ -126,6 +128,8 @@ body {
 	font-weight: 400;
 	color: var(--black-2);
 	background-color: var(--white);
+	width: 100%;
+	height: 100%;
 }
 
 img {
@@ -578,6 +582,9 @@ tr{
 
 .mt-16 {
 	margin-top: 16px;
+}
+.mb-4{
+	margin-bottom: 4px !important;
 }
 .mb-6{
 	margin-bottom: 6px !important;
