--- a/src/styles/scss/_section.scss
+++ b/src/styles/scss/_section.scss
@@ -2062,9 +2062,10 @@
 }
 
 .flat-banner-profile{
-	padding: 80px 0px 40px;
+	padding: 80px 0px 110px;
 }
 .banner-profile{
+	position: relative;
 	.banner{
 		border-radius: 24px;
 		overflow: hidden;
@@ -2076,8 +2077,9 @@
 		}
 	}
 	.avatar-check{
-		margin-top: -70px;
-		margin-left: 80px;
+		position: absolute;
+		left: 6%;
+		bottom: -20%;
 		width: 140px;
 		height: 140px;
 		border: none;
@@ -2108,6 +2110,175 @@
 		.h8{
 			margin-bottom: 6px;
 		}
+	}
+	.btn-line{
+		margin-bottom: 30px;
+	}
+	.list-count{
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		margin-bottom: 30px;
+		flex-wrap: wrap;
+		gap: 15px;
+		.count{
+			line-height: 19.8px;
+			font-weight: 700;
+		}
+	}
+	.list-badge{
+		display: flex;
+		gap: 15px;
+		.badge-item{
+			position: relative;
+			width: 40px;
+			height: 40px;
+			@include flex(center, center);
+			border-radius: 999px;
+			background-color: #874CCC;
+			.badge{
+				top: -8px;
+				right: -8px;
+				width: 20px;
+				height: 20px;
+				font-size: 11px;
+				line-height: 16.5px;
+				border: 2px solid var(--white);
+				font-family: var(--poppins);
+				background-color: #874CCC;
+			}
+			&.style-2{
+				background-color: #5755FE;
+				.badge{
+                    background-color: #5755FE;
+                }
+			}
+			&.style-3{
+				background-color: #8B93FF;
+				.badge{
+                    background-color: #8B93FF;
+                }
+			}
+			&.style-4{
+				background-color: #00B7B3;
+				.badge{
+                    background-color: #00B7B3;
+                }
+			}
+		}
+		
+	}
+	.list-social{
+		display: flex;
+		gap: 16px;
+		.icon{
+			font-size: 20px;
+			color: #b7b9ba;
+		}
+	}
+}
+.sidebar-favorite{
+	.box-profile{
+		flex-direction: column;
+		margin-bottom: 40px;
+		.avatar-check{
+			border: none;
+			width: 120px;
+			height: 120px;
+			.check{
+				width: 36px;
+				height: 36px;
+			}
+		}
+	}
+	.list-count{
+		margin-bottom: 0px;
+	}
+}
+.flat-account-wrapper{
+	
+	.banner-left{
+		position: relative;
+		.logo{
+			position: absolute;
+			left: 30px;
+			top: 30px;
+			z-index: 10;
+		}
+	}
+	.banner {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+	
+	.content-right{
+		padding: 30px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
+
+}
+.flat-form-account{
+	max-width: 450px;
+	width: 100%;
+	.box{
+		&:not(:last-child){
+			margin-bottom: 30px;
+		}
+	}
+	.title{
+		font-family: var(--poppins);
+		font-weight: 600;
+		font-size: 32px;
+		line-height: 48px;
+		color: var(--black-1);
+	}
+	.group-ip{
+		.label{
+			margin-bottom: 12px;
+			font-family: var(--poppins);
+			font-weight: 600;
+		}
+		&:not(:last-child){
+			margin-bottom: 25px;
+		}
+	}
+	.text-label{
+		margin-top: 12px;
+		font-size: 12px;
+		line-height: 13.2px;
+		color: #7B7B7B;
+	}
+	.author-line{
+		font-size: 12px;
+		line-height: 13.2px;
+		color: #7B7B7B;
+		margin: 30px 0px 16px;
+		display: flex;
+		gap: 14px;
+		justify-content: space-between;
+		align-items: center;
+		.line{
+			width: 100%;
+			height: 1px;
+			background-color: var(--line-2);
+		}
+		span{
+			white-space: nowrap;
+		}
+	}
+	.group-2{
+		display: flex;
+		gap: 10px;
+	}
+}
+.flat-form-signup{
+	.author-line{
+		margin: 30px 0px;
+
 	}
 
 }
