--- a/public/fonts/style.css
+++ b/public/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('./icomoon.eot?irtgmy');
-  src:  url('./icomoon.eot?irtgmy#iefix') format('embedded-opentype'),
-    url('./icomoon.ttf?irtgmy') format('truetype'),
-    url('./icomoon.woff?irtgmy') format('woff'),
-    url('./icomoon.svg?irtgmy#icomoon') format('svg');
+  src:  url('./icomoon.eot?lvqxoo');
+  src:  url('./icomoon.eot?lvqxoo#iefix') format('embedded-opentype'),
+    url('./icomoon.ttf?lvqxoo') format('truetype'),
+    url('./icomoon.woff?lvqxoo') format('woff'),
+    url('./icomoon.svg?lvqxoo#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,29 +25,29 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-upload:before {
-  content: "\e906";
-}
-.icon-arrow-right-circle:before {
-  content: "\e909";
+.icon-star-2:before {
+  content: "\e900";
 }
 .icon-arr-down:before {
   content: "\e90a";
 }
 .icon-account:before {
-  content: "\e900";
-}
-.icon-accountline:before {
   content: "\e901";
 }
-.icon-account-line-3:before {
+.icon-accountline:before {
+  content: "\e902";
+}
+.icon-account-line-2:before {
   content: "\e903";
 }
-.icon-arr-chart:before {
+.icon-account-line-3:before {
   content: "\e904";
 }
-.icon-arr-down1:before {
+.icon-arr-chart:before {
   content: "\e905";
+}
+.icon-arr-down1:before {
+  content: "\e906";
 }
 .icon-arr-left:before {
   content: "\e907";
@@ -219,4 +219,10 @@
 }
 .icon-youtube:before {
   content: "\e94b";
+}
+.icon-upload:before {
+  content: "\e909";
+}
+.icon-arrow-right-circle:before {
+  content: "\e912";
 }
