--- a/src/styles/scss/component/_form.scss
+++ b/src/styles/scss/component/_form.scss
@@ -32,7 +32,7 @@
         }
         &:after {
             font-family: var(--fontIcon);
-            content: "\e905";
+            content: "\e90a";
             position: absolute;
             border: none;
             right: 15px;
@@ -125,7 +125,7 @@
     }
 }
 
-.tf-check{
+.tf-check {
     position: relative;
     width: 24px;
     height: 24px;
@@ -152,13 +152,12 @@
         opacity: 0;
     }
 
-    &.style-2{
+    &.style-2 {
         border-color: var(--grey-3);
-       
     }
 }
 
-.tf-check-2{
+.tf-check-2 {
     position: relative;
     width: 22px;
     height: 22px;
@@ -186,98 +185,95 @@
     }
 }
 
-
-.dropdown-select{
+.dropdown-select {
     display: flex;
     gap: 8px;
-    .dropdown-toggle{
+    .dropdown-toggle {
         padding: 0;
         padding-right: 20px;
         min-width: 67px;
         justify-content: flex-start;
         font-weight: 500;
-       &::after{
-        right: 0;
-       }
-
+        &::after {
+            right: 0;
+        }
     }
-    .sortby-select{
+    .sortby-select {
         min-width: 120px;
     }
-    .dropdown-menu{
+    .dropdown-menu {
         padding: 10px 15px;
         border-radius: 15px;
         min-width: 120px;
-    
-   } 
-   .dropdown-item{
+    }
+    .dropdown-item {
         padding: 5px 0px;
         border-radius: 0;
-        &:hover{
+        &:hover {
             background-color: transparent;
             color: var(--primary);
         }
-   }
+    }
 }
-.progress-rate{
+.progress-rate {
     --bs-progress-height: 9px;
     --bs-progress-bar-bg: var(--primary);
-    --bs-progress-bg:#F5F5F5;
+    --bs-progress-bg: #f5f5f5;
     --bs-progress-border-radius: 50px;
-    .progress-bar{
+    .progress-bar {
         border-radius: 50px;
     }
 }
 
-.search-box{
+.search-box {
     position: relative;
-    input{
+    input {
         padding: 36px 40px;
-        box-shadow: 0px 10px 20px 0px #1405250F;
+        box-shadow: 0px 10px 20px 0px #1405250f;
         padding-right: 200px;
     }
-    .tf-btn{
+    .tf-btn {
         position: absolute;
         right: 22px;
         top: 50%;
         transform: translateY(-50%);
     }
 }
-.search-box-v2{
+.search-box-v2 {
     position: relative;
-    input{
+    input {
         font-size: 14px;
         line-height: 19.6px;
-        color: #7C818B;
+        color: #7c818b;
         border-radius: 999px;
         border: 1px solid var(--line-2);
         padding: 16px 18px;
         padding-left: 44px;
     }
-    .icon{
+    .icon {
         position: absolute;
         left: 18px;
         top: 50%;
         transform: translateY(-50%);
         font-size: 16px;
-        color: #08091B;
+        color: #08091b;
     }
 }
 
-.box-search-result{
+.box-search-result {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     gap: 30px;
     padding: 30px;
     border-radius: 16px;
-    background-color: #FBFAFD;
-    .list-search-result{
+    background-color: #fbfafd;
+    .list-search-result {
         display: flex;
         gap: 10px;
         flex-wrap: wrap;
     }
-    .result-item{
+    .result-item {
         display: flex;
         gap: 10px;
         align-items: center;
@@ -285,29 +281,28 @@
         border-radius: 14px;
         background-color: var(--white);
         border: 1px solid var(--line-2);
-        .icon{
+        .icon {
             font-size: 20px;
         }
     }
 }
-.box-subscribe{
+.box-subscribe {
     position: relative;
-    input{
+    input {
         font-size: 14px;
         line-height: 19.6px;
-        color: #7C818B;
+        color: #7c818b;
         border-radius: 999px;
         border: 1px solid var(--line-2);
         padding: 16px 18px;
         padding-right: 44px;
     }
-    .icon{
+    .icon {
         position: absolute;
         right: 18px;
         top: 50%;
         transform: translateY(-50%);
         font-size: 16px;
-        color: #08091B;
+        color: #08091b;
     }
 }
-
