--- a/src/styles/scss/_dashboard.scss
+++ b/src/styles/scss/_dashboard.scss
@@ -647,3 +647,57 @@
         }
     }
 }
+
+.meta-chart-option{
+    margin-bottom: 20px;
+    @include flex(center, space-between);
+    flex-wrap: wrap;
+    gap: 15px;
+    .content-left{
+        .text{
+            font-size: 12px;
+            line-height: 14.52px;
+        }
+        .top{
+            margin-bottom: 2px;
+        }
+        .num{
+            font-family: var(--poppins);
+            font-weight: bold;
+            font-size: 22px;
+            line-height: 30.8px;
+            color: var(--black-1);
+        }
+        .icon{
+            font-size: 24px;
+            color: var(--primary-sub);
+        }
+    }
+    .content-right{
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        flex-wrap: wrap;
+    }
+    .react-select{
+        min-width: 179px;
+        
+    }
+    .tf-btn{
+        background-color: var(--white);
+        color: var(--primary);
+        border-color: var(--primary);
+        height: 44px;
+        min-width: 100px;
+        &:hover{
+            color: var(--white);
+        }
+    }
+}
+.dot{
+    width: 10px;
+    height: 10px;
+    border-radius: 999px;
+    background-color: var(--primary);
+    display: inline-block;
+}
