--- a/src/styles/scss/component/_form.scss
+++ b/src/styles/scss/component/_form.scss
@@ -306,3 +306,28 @@
         color: #08091b;
     }
 }
+.ip-datepicker{
+    position: relative;
+    width: 179px;
+    background-color: transparent;
+    input{
+        // position: relative;
+        background-color: transparent;
+        z-index: 10;
+        color: #0E0D0F;
+        font-weight: 500;
+        &::placeholder{
+            color: #0E0D0F;
+            font-weight: 500;
+        }
+    }
+    .icon {
+        z-index: -1;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        right: 18px;
+        font-size: 20px;
+        color: rgba(14, 13, 15,0.5);
+    }
+}
