--- a/src/styles/scss/_reset.scss
+++ b/src/styles/scss/_reset.scss
@@ -111,8 +111,6 @@ section {
 
 html {
 	margin-right: 0 !important;
-	// width: 100%;
-	// height: 100%;
 }
 
 * {
@@ -128,8 +126,6 @@ body {
 	font-weight: 400;
 	color: var(--black-2);
 	background-color: var(--white);
-	width: 100%;
-	height: 100%;
 }
 
 img {
@@ -260,7 +256,7 @@ textarea {
 .textarea-3{
 	height: 150px;
 }
-button:not(.icon, .accordion-button) {
+button:not(.icon, .accordion-button,.react-datepicker__navigation ) {
 	font-family: var(--poppins);
 	padding: 13px 34.5px;
 	color: var(--white);
