--- a/src/styles/scss/_responsive.scss
+++ b/src/styles/scss/_responsive.scss
@@ -90,7 +90,7 @@
 
     .flat-account-wrapper{
         display: flex;
-	    height: 100%;
+	    height: 100vh;
         .banner-left{
             width: 48.4%;
         }
@@ -98,6 +98,9 @@
             padding: 40px;
             width: 51.6%;
             
+        }
+        &.flat-account-signup{
+            height: 100%;
         }
     }
 }
@@ -479,7 +482,11 @@
             }
         }
     }
-   
+    .meta-chart-option{
+        .or{
+            display: none;
+        }
+    }
     
 }
 
