--- a/src/styles/scss/app.scss
+++ b/src/styles/scss/app.scss
@@ -1,5 +1,5 @@
 /* ---------------------------------------------------------
-    * Name: Homzen
+    * Name: nulivo
     * Version: 1.0.0
     * Author: Themesflat
     * Author URI: http://themesflat.com 
