--- a/src/styles/scss/_dashboard.scss
+++ b/src/styles/scss/_dashboard.scss
@@ -132,6 +132,7 @@
     // z-index: 20;
     // transition: all .4s ease;
     // transform: translateX(0);
+    @include transition3;
     padding-right: 50px;
     .nav-menu-item {
         .nav-menu-link{
@@ -193,6 +194,14 @@
                 transform: unset;
             }
         }
+    }
+    .text{
+        white-space: nowrap;
+        // -webkit-transition: all 0.3s ease;
+        // -moz-transition: all 0.3s ease;
+        // -ms-transition: all 0.3s ease;
+        // -o-transition: all 0.3s ease;
+        // transition: all 0.3s ease;
     }
 }
 
@@ -718,9 +727,9 @@
 
 .layout-wrap{
     .visible-nav-text{
-        width: auto;
-        min-width: auto;
-        padding-right: 16px;
+        width: 82px;
+        min-width: 82px;
+        padding: 16px;
         .nav-menu-link{
             .text{
                 display: none;
