--- a/src/styles/scss/_section.scss
+++ b/src/styles/scss/_section.scss
@@ -797,8 +797,15 @@
 		h6 {
 			margin-bottom: 10px;
 		}
-		.icon-heart-line {
+		.icon {
 			font-size: 26px;
+			cursor: pointer;
+			&.active{
+				color: var(--primary);
+			}
+			&.icon-heart{
+				font-size: 24px;
+			}
 		}
 	}
 	.box-price {
@@ -2310,3 +2317,4 @@
 		color: var(--white);
 	}
 }
+
