--- a/src/styles/scss/_section.scss
+++ b/src/styles/scss/_section.scss
@@ -4,7 +4,7 @@
 	&.banner-v1 {
 		img {
 			width: 100%;
-			height: 550px;
+			height: 500px;
 			object-fit: cover;
 		}
 		.banner-content {
@@ -80,7 +80,7 @@
 				font-size: 24px;
 			}
 			&:not(:last-child) {
-				margin-bottom: 6px;
+				margin-bottom: 10px;
 			}
 		}
 		.tf-btn {
@@ -202,10 +202,41 @@
 	display: block;
 	border-radius: 14px;
 	overflow: hidden;
+	@include transition3;
 	.archive-banner {
 		position: relative;
 		overflow: hidden;
 		display: block;
+		
+		.icon{
+			position: absolute;
+			top: 10px;
+			right: 10px;
+			font-size: 16px;
+			@include flex(center, center);
+			z-index: 50;
+			color: var(--primary);
+			background-color: var(--white);
+			width: 24px;
+			height: 24px;
+			border-radius: 50%;
+			cursor: pointer;
+			opacity: 0;
+		}
+		.icon-heart{
+			font-size: 14px;
+		}
+	}
+	.image-banner {
+		display: block;
+		overflow: hidden;
+		position: relative;
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			@include transition3;
+		}
 		&::after {
 			position: absolute;
 			content: "";
@@ -215,23 +246,19 @@
 			@include transition3;
 		}
 	}
-	.image-banner {
-		display: block;
-		overflow: hidden;
-		img {
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-			@include transition3;
-		}
-	}
 	&:hover {
-		.archive-banner {
+		box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.2);
+		-webkit-box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.2);
+		-moz-box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.2);
+		.image-banner {
 			&::after {
 				opacity: 1;
 			}
-			img {
-				transform: scale(1.05);
+			
+		}
+		.archive-banner{
+			.icon{
+				opacity: 1;
 			}
 		}
 	}
@@ -865,6 +892,23 @@
 				margin-bottom: 10px;
 			}
 		}
+		.title-free{
+			margin-bottom: 16px;
+		}
+		.label-license{
+			color: var(--primary);
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			gap: 8px;
+			margin-bottom: 16px;
+			.icon {
+				font-size: 20px;
+			}
+		}
+
+
+
 	}
 	.box-btn {
 		.tf-btn {
