--- a/src/styles/scss/_responsive.scss
+++ b/src/styles/scss/_responsive.scss
@@ -103,6 +103,12 @@
             height: 100%;
         }
     }
+    .page-title-become{
+        .title{
+            font-size: 40px;
+            line-height: 48px;
+        }
+    }
 }
 @media only screen and (min-width: 1150px) {
     .banner-page-title {
