--- a/src/styles/scss/component/_form.scss
+++ b/src/styles/scss/component/_form.scss
@@ -155,6 +155,14 @@
     &.style-2 {
         border-color: var(--grey-3);
     }
+    &.sm{
+        width: 18px;
+        height: 18px;
+        &::before{
+            width: 12px;
+            height: 12px; 
+        }
+    }
 }
 
 .tf-check-2 {
@@ -163,7 +171,7 @@
     height: 22px;
     padding: 0;
     -webkit-appearance: none;
-    border-radius: 999px;
+    border-radius: 999px !important;
     border: 1px solid var(--black-2);
     @include flex(center, center);
     &:checked {
@@ -182,6 +190,14 @@
         height: 16px;
         background-color: var(--primary);
         opacity: 0;
+    }
+    &.sm{
+        width: 18px;
+        height: 18px;
+        &::before{
+            width: 12px;
+            height: 12px; 
+        }
     }
 }
 
