--- a/src/styles/scss/_responsive.scss
+++ b/src/styles/scss/_responsive.scss
@@ -109,6 +109,9 @@
             line-height: 48px;
         }
     }
+    .box-upload-bg{
+        padding: 30px;
+    }
 }
 @media only screen and (min-width: 1150px) {
     .banner-page-title {
