--- a/src/styles/scss/_dashboard.scss
+++ b/src/styles/scss/_dashboard.scss
@@ -835,3 +835,33 @@
         }
     }
 }
+.box-upload-bg{
+    border: 1px dashed var(--line);
+    border-radius: 14px;
+    padding: 15px;
+    text-align: center;
+    .box-upload{
+        position: relative;
+        display: inline-flex;
+        margin: 10px 0px;
+        .ip-file{
+            position: absolute;
+            inset: 0;
+            opacity: 0;
+        }
+    }
+    .title-font{
+        margin-top: 10px;
+    }
+    .img-bg{
+        max-width: 100%;
+        width: 100%;
+        height: 100%;
+        img{
+            width: 100%;
+            height: 100%;
+            max-height: 400px;
+            object-fit: cover;
+        }
+    }
+}
